--- a/Python 技術者們實踐.ipynb
+++ b/Python 技術者們實踐.ipynb
@@ -127,9 +127,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "level-novelty",
+   "metadata": {},
+   "source": [
+    "# 17/07/2021 星期六 練習\n",
+    "## list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "anticipated-talent",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "蘋果\n",
+      "['P', 'y', 't', 'h', 'o', 'n', ' ', '你', '好', '!']\n",
+      "b[2] =  3\n",
+      "b[2] =  abc\n",
+      "82\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['蘋果','香蕉','芭樂']\n",
+    "print(fruits[0])\n",
+    "\n",
+    "# 西瓜，45一斤，目前缺貨\n",
+    "a = ['西瓜',45,False]\n",
+    "\n",
+    "s = list(\"Python 你好!\")\n",
+    "print(s)\n",
+    "\n",
+    "# list 的索引\n",
+    "b = [1,2,3]\n",
+    "print(\"b[2] = \" , b[2])\n",
+    "b[2] = 'abc'\n",
+    "print(\"b[2] = \" , b[2])\n",
+    "\n",
+    "## 多層容器\n",
+    "fruits = [['蘋果', 82], ['香蕉', 45], ['芭樂', 59]]\n",
+    "print(fruits[0][1])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sufficient-parking",
+   "id": "large-combine",
    "metadata": {},
    "outputs": [],
    "source": []
