--- a/Python 技術者們實踐.ipynb
+++ b/Python 技術者們實踐.ipynb
@@ -175,9 +175,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "composite-actress",
+   "metadata": {},
+   "source": [
+    "# 18/07/2021 星期天 練習"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "abroad-puppy",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['e', 'l']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 容器 slicing 切片\n",
+    "a = list(\"helloworld\")\n",
+    "print(a[1:3]) # 回傳索引1到2的list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fourth-dealing",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6]\n",
+      "[1, 5, 'AB', 4, 5, 6]\n",
+      "[1, 'a', 'b', 'c']\n",
+      "[1, 'b', 'c']\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = [1,2,3,4,5,6]\n",
+    "print(s[1:6:2])\n",
+    "\n",
+    "s[1:3] = [5,'AB']\n",
+    "print(s)\n",
+    "\n",
+    "s[1:] = \"abc\" #後面的東西會不見\n",
+    "print(s)\n",
+    "\n",
+    "del s[1]\n",
+    "print(s)\n",
+    "\n",
+    "print(1 in s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "interracial-married",
+   "metadata": {},
+   "source": [
+    "## tuple : 不可更改的串列"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "large-combine",
+   "id": "wrapped-lunch",
    "metadata": {},
    "outputs": [],
    "source": []
