--- a/Python 技術者們實踐.ipynb
+++ b/Python 技術者們實踐.ipynb
@@ -241,16 +241,106 @@
    "id": "interracial-married",
    "metadata": {},
    "source": [
-    "## tuple : 不可更改的串列"
+    "## tuple : 不可更改的串列\n",
+    "適合用於 重要數據、運行速度快、可以和list混用"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "wrapped-lunch",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "甲\n",
+      "(0, 1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "grade = ('甲','乙','丙','丁'); order = [0, 1, 2, 3]\n",
+    "\n",
+    "print(grade[0])\n",
+    "\n",
+    "order2 = tuple(order)\n",
+    "print(order2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "classical-technician",
+   "metadata": {},
+   "source": [
+    "## set： 一堆資料的集合\n",
+    "* 隨機擺放資料，沒有固定位置\n",
+    "* 資料唯一、不可重複"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "labeled-clearance",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2}\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "myset = {0, 1, 2, 1}\n",
+    "print(myset) #資料不可重複，所以‘1’只會出現一次\n",
+    "\n",
+    "# 由於沒有排序，所以不可用切片（slicing) 和 索引算符 []\n",
+    "print(1 in myset) #output:  True\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "pediatric-raising",
+   "metadata": {},
+   "source": [
+    "## dict: 以鍵查值的字典\n",
+    "* [鍵:值]\n",
+    "* 鍵必需唯一，但值可以重複"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "standard-volunteer",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': 3, 'B': 2}\n",
+      "25\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {'A':1, 'B':2, 'A':3} # 如果鍵重複，新的值將會蓋掉舊的\n",
+    "print(a)\n",
+    "\n",
+    "# 用索引符 [] 取值\n",
+    "d = {'紅茶':25, '果汁':45}\n",
+    "print(d['紅茶'])\n",
+    "\n",
+    "# 算符\n",
+    "print('紅茶' in d) # output: True\n",
+    "print (25 in d) # output: False"
+   ]
   }
  ],
  "metadata": {
