--- a/Python 技術者們實踐.ipynb
+++ b/Python 技術者們實踐.ipynb
@@ -807,8 +807,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "virgin-lodging",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "蘋果、柳丁、香蕉很好吃蘋果、柳丁、香蕉很好吃"
+     ]
+    }
+   ],
+   "source": [
+    "# print 的使用方式\n",
+    "print('蘋果','柳丁','香蕉', sep = '、', end='很好吃')\n",
+    "print('蘋果','柳丁','香蕉', sep = '、', end='很好吃')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "amateur-assistant",
    "metadata": {},
    "outputs": [],
    "source": []
