--- a/Python 技術者們實踐.ipynb
+++ b/Python 技術者們實踐.ipynb
@@ -1472,6 +1472,17 @@
    "source": [
     "# 第五章 PYTHON 最強功能內建函式庫 與 第三方套件"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import Tk\n",
+    "win = Tk()\n",
+    "win.mainloop()"
+   ]
   }
  ],
  "metadata": {
