--- a/Python 技術者們實踐.ipynb
+++ b/Python 技術者們實踐.ipynb
@@ -1483,6 +1483,28 @@
     "win = Tk()\n",
     "win.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "from time import sleep\n",
+    "\n",
+    "browser = webdriver.Chrome('./chromedriver') #需要去下載chromedriver,然後放到與程式碼一樣的位置\n",
+    "browser.get('https://www.flag.com.tw/')\n",
+    "sleep(5)\n",
+    "browser.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
