--- a/Python 技術者們實踐.ipynb
+++ b/Python 技術者們實踐.ipynb
@@ -1584,10 +1584,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "白日依山盡\n",
+      "黃河入海流\n",
+      "欲求千里目\n",
+      "更上一層樓\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 用 open 檔案的時候，記得使用 close\n",
+    "f = open('a.txt', encoding= 'utf-8')\n",
+    "data = f.read()\n",
+    "print(data)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "白日依山盡\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 使用 with 確保外部資源（如 檔案）在用完後會關閉\n",
+    "with open('a.txt', encoding= 'utf-8') as f:\n",
+    "    s = f.read(5) # 讀取5個字\n",
+    "\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 暫時對LINE 和 股票 的事情沒有興趣，可能會先跳過這一項練習"
+   ]
   }
  ],
  "metadata": {
