--- a/Python 技術者們實踐 chapter 8 YouTube 下載器.ipynb
+++ b/Python 技術者們實踐 chapter 8 YouTube 下載器.ipynb
@@ -7,15 +7,31 @@
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
+    "\n",
+    "def click_func():\n",
+    "    tkstr.set('被按了')\n",
+    "\n",
     "# -- 主視窗 --\n",
     "window = tk.Tk()\n",
-    "window.geometry('680x480')\n",
+    "window.geometry('640x480')\n",
     "window.title('YouTube 極速下載器')\n",
-    "window.mainloop()\n",
     "\n",
     "# -- Frame --\n",
-    "input_fm = tk.Frame(window, bg = 'red', width = 640, height = 120)\n",
-    "input_fm.p"
+    "input_fm = tk.Frame(window, bg='red', width=640, height=120)\n",
+    "input_fm.pack()\n",
+    "\n",
+    "# -- Button --\n",
+    "tkstr = tk.StringVar()\n",
+    "tkstr.set('請按我')\n",
+    "btn = tk.Button(window, textvariable=tkstr, font=('細明體', 20), command=click_func)\n",
+    "btn.pack() # 排版\n",
+    "\n",
+    "# -- Label --\n",
+    "lb = tk.Label(window, bg='red', fg='white', text='請輸入 YouTube 網址', font=('細明體', 30), padx=50, pady=80)\n",
+    "lb.pack()\n",
+    "\n",
+    "# -- 啟動主視窗 --\n",
+    "window.mainloop()"
    ]
   },
   {
