--- a/Python 技術者們實踐 chapter 8 YouTube 下載器.ipynb
+++ b/Python 技術者們實踐 chapter 8 YouTube 下載器.ipynb
@@ -284,6 +284,57 @@
     "\n",
     "# 雖然下載了下來，但畫質很模糊，所以需要設定"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8-14.py 利用爬蟲下載清單中的所有影片\n",
+    "# 建立 自定函式 get_urls()\n",
+    "from bs4 import BeautifulSoup\n",
+    "import requests\n",
+    "from pytube import YouTube\n",
+    "import lxml\n",
+    "\n",
+    "def get_urls(url):\n",
+    "    urls = [] # 影片清單網址\n",
+    "    if '&list=' not in url: return urls # 單一影片\n",
+    "    response = requests.get(url)\n",
+    "    if response.status_code != 200:\n",
+    "        print('請求失敗')\n",
+    "        return\n",
+    "    # ------- 請求成功， 解析網頁 -----------\n",
+    "    bs = BeautifulSoup(response.text, 'html.parser')\n",
+    "    a_list = bs.find_all('href') # 找到所有的<a>標籤\n",
+    "    # print(a_list)\n",
+    "    base = 'https://www.youtube.com/' # YouTube 主網址\n",
+    "    for a in a_list:\n",
+    "        href = a.get('href')  # 取得 <a> 的 href 屬性內容\n",
+    "        print(href)\n",
+    "        url = base + href\n",
+    "        if ('&index=' in url) and (url not in urls):\n",
+    "            urls.append(url)\n",
+    "    return urls\n",
+    "\n",
+    "#----------主程式--------------\n",
+    "sing_url = 'https://www.youtube.com/watch?v=Qr-doch1dHs'\n",
+    "playlist_url = ('https://www.youtube.com/watch?v=Qr-doch1dHs&list=PLUiv1g_xy7i0IGAu7rDwpC_9k46RYgh9n')\n",
+    "urls = get_urls(playlist_url)\n",
+    "for url in urls:\n",
+    "    yt = YouTube(url)\n",
+    "    print(f'{yt.title}...下載中')\n",
+    "    yt.streams.first().download()\n",
+    "    print(f'{yt.title}...下載完成')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
