--- a/Python 技術者們實踐 chapter 8 YouTube 下載器.ipynb
+++ b/Python 技術者們實踐 chapter 8 YouTube 下載器.ipynb
@@ -331,10 +331,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub(befor): 10\n",
+      "sub(after): 9\n",
+      "-------\n",
+      "sub(befor): 29\n",
+      "sub(after): 28\n",
+      "-------\n",
+      "sub(befor): 48\n",
+      "sub(after): 47\n",
+      "-------\n",
+      "sub(befor): 67\n",
+      "sub(after): 66\n",
+      "-------\n",
+      "sub(befor): 86\n",
+      "sub(after): 85\n",
+      "-------\n",
+      "sub(befor): 105\n",
+      "sub(after): 104\n",
+      "-------\n",
+      "sub(befor): 124\n",
+      "sub(after): 123\n",
+      "-------\n",
+      "sub(befor): 143\n",
+      "sub(after): 142\n",
+      "-------\n",
+      "sub(befor): 162\n",
+      "sub(after): 161\n",
+      "-------\n",
+      "sub(befor): 181\n",
+      "sub(after): 180\n",
+      "-------\n",
+      "sub(befor): 200\n",
+      "sub(after): 199\n",
+      "-------\n",
+      "sub(befor): 219\n",
+      "sub(after): 218\n",
+      "-------\n",
+      "sub(befor): 238\n",
+      "sub(after): 237\n",
+      "-------\n",
+      "sub(befor): 257\n",
+      "sub(after): 256\n",
+      "-------\n",
+      "sub(befor): 276\n",
+      "sub(after): 275\n",
+      "-------\n",
+      "sub(befor): 295\n",
+      "sub(after): 294\n",
+      "-------\n",
+      "sub(befor): 314\n",
+      "sub(after): 313\n",
+      "-------\n",
+      "sub(befor): 333\n",
+      "sub(after): 332\n",
+      "-------\n",
+      "sub(befor): 352\n",
+      "sub(after): 351\n",
+      "-------\n",
+      "sub(befor): 371\n",
+      "sub(after): 370\n",
+      "-------\n",
+      "sub(befor): 390\n",
+      "sub(after): 389\n",
+      "-------\n",
+      "sub(befor): 409\n",
+      "sub(after): 408\n",
+      "-------\n",
+      "sub(befor): 428\n",
+      "sub(after): 447\n",
+      "-------\n",
+      "sub(befor): 447\n",
+      "sub(after): 446\n",
+      "-------\n",
+      "sub(befor): 466\n",
+      "sub(after): 465\n",
+      "-------\n",
+      "sub(befor): 485\n",
+      "sub(after): 484\n",
+      "-------\n",
+      "sub(befor): 504\n",
+      "sub(after): 503\n",
+      "-------\n",
+      "sub(befor): 523\n",
+      "sub(after): 522\n",
+      "-------\n",
+      "sub(befor): 542\n",
+      "sub(after): 541\n",
+      "-------\n",
+      "sub(befor): 561\n",
+      "sub(after): 580\n",
+      "-------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8-15.py 使用多執行緒下載清單中的所有影片\n",
+    "import threading\n",
+    "\n",
+    "def sub():\n",
+    "    global var\n",
+    "    print('sub(befor):', var)\n",
+    "    var -= 1\n",
+    "    print('sub(after):', var)\n",
+    "    print('-------')\n",
+    "    \n",
+    "def add(): # 對變數 var 加20\n",
+    "    global var\n",
+    "    var += 20\n",
+    "    \n",
+    "var = 10\n",
+    "for i in range(30):\n",
+    "    a = threading.Thread(target = sub).start()\n",
+    "    b = threading.Thread(target = add).start()\n",
+    "    \n",
+    "# 會因為發生競速，得到與預期不符的結果 ， sub()函式對 var 減 1 後， 卻比原來的值還大的情況"
+   ]
   }
  ],
  "metadata": {
