--- a/Python 技術者們實踐 chapter 8 YouTube 下載器.ipynb
+++ b/Python 技術者們實踐 chapter 8 YouTube 下載器.ipynb
@@ -589,9 +589,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ytube_modules'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-feac68381ece>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 8-17.py 以多執行緒下載影片\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mytube_modules\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mm\u001b[0m \u001b[1;31m# 這個東西已經失效了\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpytube\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mYouTube\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mthreading\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'ytube_modules'"
+     ]
+    }
+   ],
    "source": [
     "# 8-17.py 以多執行緒下載影片\n",
     "import ytube_modules as m # 這個東西已經失效了\n",
@@ -605,8 +617,35 @@
     "    except:\n",
     "        print('pytube 不支持此影片或者網址錯誤')\n",
     "        return\n",
-    "    name = yt.title\n"
+    "    name = yt.title\n",
+    "     # ---------------↓鎖定區域A↓ --------------\n",
+    "    lock.acquire()\n",
+    "    print(f'{name}...下載中')\n",
+    "    lock.release()\n",
+    "    # ----------------↑鎖定區域A↑ --------------\n",
+    "    yt.steams.first().download() #開始下載影片(不需鎖定)\n",
+    "    # ---------------↓鎖定區域B↓ --------------\n",
+    "    lock.acquire()\n",
+    "    print(f'●{name}...下載完成')\n",
+    "    lock.release()\n",
+    "    # ----------------↑鎖定區域B↑ --------------\n",
+    "# ------- 主程式 ---------\n",
+    "playlist_url = ('https://www.youtube.com/watch?v=txWmd7QKFe8')\n",
+    "urls = m.get_urls(playlist_url)\n",
+    "if urls:\n",
+    "    for u in urls:\n",
+    "        threading.Thread(target=start_dload,args=(u,'Listbox')).start() #建立執行緒進行下載)\n",
+    "else:\n",
+    "    print('此網址為單一影片')\n",
+    "    threading.Thread(target=start_dload,args=(u,'Listbox')).start() #建立執行緒進行下載)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
