--- a/Python 技術者們實踐 chapter 8 YouTube 下載器.ipynb
+++ b/Python 技術者們實踐 chapter 8 YouTube 下載器.ipynb
@@ -606,7 +606,7 @@
    ],
    "source": [
     "# 8-17.py 以多執行緒下載影片\n",
-    "import ytube_modules as m # 這個東西已經失效了\n",
+    "import ytube_modules as m # 這個東西已經失效了， 而且原本的程式碼也因為YouTube的改版而變得失效了\n",
     "from pytube import YouTube\n",
     "import threading\n",
     "\n",
